# data-stack-agroprotect

./: .gitignore  README.md
agro-protect/: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  pyproject.toml
agro-protect/data/: impuestos_agro_argentina.csv
agro-protect/extraction/: .env.example  README.md  meltano.yml
agro-protect/extraction/data/: locations.csv
agro-protect/extraction/scripts/: meltano_install.sh  patch_meltano_loader_venvs.sh  run_dev_elt.sh  run_elt.sh  run_prod_elt.sh  run_tap_agro_bq_yearly.sh  setup-local.sh
agro-protect/scripts/: README.md  export_to_gcs.py  requirements-export.txt
agro-protect/transform/: .env.example  .sqlfluff  dbt_project.yml  packages.yml  profiles.yml.example
agro-protect/transform/ci/: ensure_tap_agro_raw_for_dbt.sh
agro-protect/transform/macros/: ensure_source_datasets.sql  generate_schema_name.sql  normalize_text.sql
agro-protect/transform/models/: README.md  overview.md
agro-protect/transform/models/staging/: schema_agro.yml  source_github.yml  source_nasa.yml  source_tap_agro.yml  stg_agro_clima_diario_nasa_power.sql  stg_agro_locations.sql  stg_clima_diario_nasa.sql  stg_clima_diario_nasa.yml  stg_github_branches.sql  stg_github_commits.sql  stg_github_pull_requests_commits.sql  stg_github_repositories.sql  stg_impuestos_agro_argentina.sql  (+2 more)
agro-protect/transform/scripts/: setup-local.sh
agro-protect/transform/seeds/: rendimiento_agro.csv  seeds.yml
agro-protect/transform/tests/: app_location_snapshot_has_high_coverage.sql  app_location_snapshot_prefers_usable_rows.sql
(+53 files in other folders)
